# deep-researcher

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: demo.ipynb
src/deep_researcher/: cli.py  config.py
src/deep_researcher/agents/: fact_checker.py  planner.py  researcher.py  synthesizer.py
src/deep_researcher/graph/: builder.py  edges.py  nodes.py  state.py
src/deep_researcher/models/: research.py
src/deep_researcher/tools/: page_extractor.py  web_search.py
tests/integration/: test_fact_checker.py  test_planner.py  test_researcher.py  test_synthesizer.py
tests/unit/: test_research.py
