[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-researcher"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "litellm>=1.40",
    "langfuse>=2.0",
    "duckduckgo-search>=6.0",
    "trafilatura>=1.9",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "structlog>=24.0",
    "click>=8.0",
    "rich>=13.0",
    "tavily-python",
    "langgraph-checkpoint-sqlite>=3.0.3",
]
[project.scripts]
"deep-researcher" = "deep_researcher.cli:main"
